@@ -7,6 +7,10 @@
 
 RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
+  From Mats Wichmann:
+    - scons-time takes more care closing files and uses safer mkdtemp to avoid
+      possible races on multi-job runs.
+
   From John Doe:
 
     - Whatever John Doe did.
